Removed webTestClient and used RestAssured instead for IT only. Removed TestCookiesUtil class because RestAssured has build-in support